src/objects/AdvancedProfiling__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Advanced Profiling</relationshipLabel>
        <relationshipName>Advanced_Profiling</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Adhesive__c</fullName>
        <label>Adhesive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Prime &amp; Bond / Xeno IV)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anesthetic__c</fullName>
        <label>Anesthetic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Astracaine / Polycaine / Xylocaine / Topex Gel / Oraqix)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appliances__c</fullName>
        <label>Appliances -Night/Sportsguards/Retainers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>No Digital (Traditional impression taken, sent to lab for fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner Only (Digital impression taken, sent to lab for fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner &amp; Mill (Digital scan taken, sent to lab for fabrication)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AstraRestorativeProsthoKit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you currently have an Astra Restorative / Prostho Kit?</description>
        <inlineHelpText>Do you currently have an Astra Restorative / Prostho Kit?</inlineHelpText>
        <label>Astra Restorative / Prostho Kit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BoneRegenerative__c</fullName>
        <label>Bone / Regenerative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (Ossix)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Dentsply Sirona</fullName>
                    <isActive>false</isActive>
                    <label>Dentsply Sirona</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BracketSystemUsed__c</fullName>
        <label>Bracket System Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GAC / Orametrix (Dentsply Sirona)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bridges__c</fullName>
        <label>Bridges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>No Digital (Traditional impression taken, sent to lab to bridge fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner Only (Digital scan taken, sent to lab for bridge fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner &amp; Mill (Digital scan taken, bridge designed and milled in house with CAD/CAM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CADCAMBlocks__c</fullName>
        <label>CAD/CAM Blocks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Celtra / Cerec Zirconia)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CavitronInserts__c</fullName>
        <label>Cavitron Inserts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Fitgrip / Hardgrip / Diamoncoat)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cement__c</fullName>
        <label>Cement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Calibra / Integrity)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClearAlignerBrandUsed__c</fullName>
        <label>Clear Aligner Brand Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SureSmile (Dentsply Sirona)</fullName>
                </value>
                <value>
                    <fullName>Invisalign</fullName>
                </value>
                <value>
                    <fullName>Clear Correct</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClearAlignerTherapyOrtho__c</fullName>
        <label>Clear Aligner Therapy (ortho)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>We do not provide clear aligner services.</fullName>
                </value>
                <value>
                    <fullName>No Digital (Traditional impression taken, sent to lab for scan (STL), sent to provider for case planning and aligner fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner Only (Digital scan taken, sent to provider for case planning and aligner fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner &amp; Mill (Digital scan taken, sent to provider for case planning and aligner fabrication)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Composite__c</fullName>
        <label>Composite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Esthetx Flow / Surefil SDR+ / TPH Spectra)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoreBuildUpMaterials__c</fullName>
        <label>Core Build-Up Materials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Fluorocore 2+)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crowns__c</fullName>
        <label>Crowns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Digital (Traditional impression taken, sent to lab for corwn fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner Only (Digital scan taken, sent to lab for crown fabrication)</fullName>
                </value>
                <value>
                    <fullName>Scanner &amp; Mill (Digital scan taken, crown designed and milled in house with CAD/CAM)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DigitalScanner__c</fullName>
        <label>Digital Scanner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS Primescan</fullName>
                </value>
                <value>
                    <fullName>DS Omnicam</fullName>
                </value>
                <value>
                    <fullName>DS Bluecam</fullName>
                </value>
                <value>
                    <fullName>3Shape</fullName>
                </value>
                <value>
                    <fullName>Itero</fullName>
                </value>
                <value>
                    <fullName>Medit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndoEstimatedCaseAcceptance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Endo: Estimated Case Acceptance %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndoSpecialistRefTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Endo: Specialist Ref. To (Primary)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Advanced_Profiling4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EssixMachine__c</fullName>
        <inlineHelpText>Essix provides the ability to make all sorts of guards/retainers</inlineHelpText>
        <label>Essix Machine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS Drufomat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FamiliarRestorativeOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you familiar with the Astra Implant / Restorative Options available to your practice?</description>
        <inlineHelpText>Are you familiar with the Astra Implant / Restorative Options available to your practice?</inlineHelpText>
        <label>Familiar w/ Restorative Options ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileSystem__c</fullName>
        <label>File System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona ( Protaper, Waveone, Vortex..)</fullName>
                </value>
                <value>
                    <fullName>SybronEndo ( K3 , TF adaptive, Twisted Files)</fullName>
                </value>
                <value>
                    <fullName>Brasseler ( EndoSequence, Scout, ESX)</fullName>
                </value>
                <value>
                    <fullName>EdgeEndo (EdgeOne, EdgeFile, EdgeTaper..)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Brassler</fullName>
                    <isActive>false</isActive>
                    <label>Brassler</label>
                </value>
                <value>
                    <fullName>Dentsply Sirona (i.e. WaveOne Gold, ProTaper, ProFile)</fullName>
                    <isActive>false</isActive>
                    <label>Dentsply Sirona (i.e. WaveOne Gold, ProTaper, ProFile)</label>
                </value>
                <value>
                    <fullName>Edge Endo (Henry Schein)</fullName>
                    <isActive>false</isActive>
                    <label>Edge Endo (Henry Schein)</label>
                </value>
                <value>
                    <fullName>Twisted Files (Sybron Endo)</fullName>
                    <isActive>false</isActive>
                    <label>Twisted Files (Sybron Endo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinishingPolishing__c</fullName>
        <label>Finishing &amp; Polishing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Enhance / Pogo)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FluorideVarnish__c</fullName>
        <label>Fluoride Varnish</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Nupro Varnish)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FutureEquipmentAcquisitionPlan__c</fullName>
        <description>TFUS-000003190: New field replacing &apos;Irrigation Needles&apos;</description>
        <inlineHelpText>0-12 months</inlineHelpText>
        <label>Future Equipment Acquisition Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Torq Control Motor</fullName>
                </value>
                <value>
                    <fullName>New Obturation Device</fullName>
                </value>
                <value>
                    <fullName>New Apex Locator Device</fullName>
                </value>
                <value>
                    <fullName>New Piezo Ultrasonic</fullName>
                </value>
                <value>
                    <fullName>New Irrigation Device</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GuidedImplantPlacement__c</fullName>
        <label>Guided Implant Placement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>We do not perform guided implant placement</fullName>
                </value>
                <value>
                    <fullName>No Digital (Traditional impression taken, sent to lab for guide design and creation)</fullName>
                </value>
                <value>
                    <fullName>Scanner Only (Digital scan taken, sent to lab for guide design and creation)</fullName>
                </value>
                <value>
                    <fullName>Scanner &amp; Mill (Digital scan taken, guide designed in house, sent to lab for printed guide)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GuttaPercha__c</fullName>
        <description>TFUS-000003190: field label changed from &apos;Gutta Percha&apos; to &apos;Obturation Technique&apos;</description>
        <label>Obturation Technique</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona ( Calamus, GuttaSmart, Obturator oven)</fullName>
                </value>
                <value>
                    <fullName>SybronEndo (Elements, Elements Free)</fullName>
                </value>
                <value>
                    <fullName>Brasseler (Single cone with Bioceramic sealer)</fullName>
                </value>
                <value>
                    <fullName>EdgeEndo (Edgecore, Edgefill)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Brassler</fullName>
                    <isActive>false</isActive>
                    <label>Brassler</label>
                </value>
                <value>
                    <fullName>Dentsply Sirona (i.e. Guttacore)</fullName>
                    <isActive>false</isActive>
                    <label>Dentsply Sirona (i.e. Guttacore)</label>
                </value>
                <value>
                    <fullName>Edge Endo (Henry Schein)</fullName>
                    <isActive>false</isActive>
                    <label>Edge Endo (Henry Schein)</label>
                </value>
                <value>
                    <fullName>Twisted Files (Sybron Endo)</fullName>
                    <isActive>false</isActive>
                    <label>Twisted Files (Sybron Endo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HandFiles__c</fullName>
        <label>Hand Files</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona Lexicon (K-files, C-Files, FlexSSK)</fullName>
                </value>
                <value>
                    <fullName>Dentsply Sirona Maillefer (Flexofiles, K-files, C-Plus)</fullName>
                </value>
                <value>
                    <fullName>SybronEndo (K-files, F-flex)</fullName>
                </value>
                <value>
                    <fullName>Brasseler (KontrolFlex, K-files, Stiff K-Files)</fullName>
                </value>
                <value>
                    <fullName>Mani Files</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Dentsply Sirona (i.e. Lexicon Pre Sterile Hand Files)</fullName>
                    <isActive>false</isActive>
                    <label>Dentsply Sirona (i.e. Lexicon Pre Sterile Hand Files)</label>
                </value>
                <value>
                    <fullName>Henry Schein</fullName>
                    <isActive>false</isActive>
                    <label>Henry Schein</label>
                </value>
                <value>
                    <fullName>Patterson</fullName>
                    <isActive>false</isActive>
                    <label>Patterson</label>
                </value>
                <value>
                    <fullName>Sinclair</fullName>
                    <isActive>false</isActive>
                    <label>Sinclair</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImplantAbutmentsCoverScrews__c</fullName>
        <label>Implant Abutments / Cover Screws</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Tybase / Atlantis)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImplantRestoration__c</fullName>
        <label>Implant Restoration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>We do not restore implants.</fullName>
                </value>
                <value>
                    <fullName>No Digital (traditional impression taken, sent to lab for implant abutment and crown)</fullName>
                </value>
                <value>
                    <fullName>Scanner Only (Digital scan taken, sent to lab for implant crown fabrication</fullName>
                </value>
                <value>
                    <fullName>Scanner &amp; Mill (Digital scan taken, implant crown designed with in house software, implant crown milled in house)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImplantsEstimatedCaseAcceptance__c</fullName>
        <description>Estimated case acceptance % for implant placement?</description>
        <inlineHelpText>Estimated case acceptance % for implant placement?</inlineHelpText>
        <label>Implants: Estimated Case Acceptance %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ImplantsPrimaryLabUsed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implants: Primary Lab Used</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. (Account must be a Lab)</errorMessage>
            <filterItems>
                <field>Account.Sub_Account_Type__c</field>
                <operation>equals</operation>
                <value>Lab, Lab Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Advanced_Profiling2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImplantsSpecialistRefTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implants: Specialist Ref. To (Primary)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Advanced_Profiling3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImpressionMaterials__c</fullName>
        <label>Impression Materials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Align / Aquasil / Jeltrate / Regisil / Reprosil)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IrrigationNeedles__c</fullName>
        <label>Irrigation Needles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. ProRinse, EndoActivator Tips, Qmix)</fullName>
                </value>
                <value>
                    <fullName>Henry Schein</fullName>
                </value>
                <value>
                    <fullName>Sinclair</fullName>
                </value>
                <value>
                    <fullName>Patterson</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LabUsedforAppliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab Used for Appliance(s)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. (you must select a Lab)</errorMessage>
            <filterItems>
                <field>Account.Sub_Account_Type__c</field>
                <operation>equals</operation>
                <value>Lab, Lab Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Advanced_Profiling5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LabUsedforCrownBridge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab Used for Crown &amp; Bridge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Sub_Account_Type__c</field>
                <operation>equals</operation>
                <value>Lab, Lab Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Advanced_Profiling7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatrixMaterials__c</fullName>
        <label>MatrixMaterials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Palodent 360 / Palodent Plus)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mill__c</fullName>
        <label>Mill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DS Primemill</fullName>
                </value>
                <value>
                    <fullName>DS CEREC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NrOfCBCTScansPerformedEachMonth__c</fullName>
        <inlineHelpText>Only fill this field out if the Doctor owns a CBCT (3D Extraoral Imaging unit)</inlineHelpText>
        <label># of CBCT Scans performed/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfBridgesMonth__c</fullName>
        <label># of Bridges/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfCBCTScansReferredMonth__c</fullName>
        <inlineHelpText>Only fill this field out if the doctor does NOT own a CBCT (3D Extraoral Imaging unit)</inlineHelpText>
        <label># of CBCT Scans Referred/Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfCrownsMonth__c</fullName>
        <label># of Crowns/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrthoEstimatedCase__c</fullName>
        <description>What is your estimated case acceptance % for orthodontic treatment?</description>
        <inlineHelpText>What is your estimated case acceptance % for orthodontic treatment?</inlineHelpText>
        <label>Ortho: Estimated Case %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrthoSpecialistRefTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ortho: Specialist Ref. To (Primary)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Advanced_Profiling6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oven__c</fullName>
        <label>Oven</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Speedfire</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlasticsForAppliances__c</fullName>
        <label>Plastics (for Appliances)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (Essix Plastics)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreferredImplantSystem__c</fullName>
        <label>Preferred Implant System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dentsply Sirona (i.e. Astra, Ankylos)</fullName>
                </value>
                <value>
                    <fullName>Hiossen</fullName>
                </value>
                <value>
                    <fullName>Implant Direct</fullName>
                </value>
                <value>
                    <fullName>MIS Product</fullName>
                </value>
                <value>
                    <fullName>Neodent</fullName>
                </value>
                <value>
                    <fullName>Nobel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Zimmer/3i</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>